deployment/mesh-infra/istio/routing/http.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "http-virtual-service"
spec:
  gateways:
  - "teadal-gateway"
  hosts:
  - "*"
  http:
  - match:  # NOTE (1)
    - uri:
        prefix: /argocd/
    - uri:
        prefix: /argocd
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  - match:  # NOTE (1)
    - uri:
        prefix: /httpbin/
    - uri:
        prefix: /httpbin
    rewrite:
      uri: /
    route:
    - destination:
        host: httpbin.default.svc.cluster.local
        port:
          number: 8000
  - match:  # NOTE (2)
    - uri:
        prefix: /keycloak
    route:
    - destination:
        host: keycloak.default.svc.cluster.local
        port:
          number: 8080
  - match:  # NOTE (1)
    - uri:
        prefix: /minio/
    - uri:
        prefix: /minio
    rewrite:
      uri: /
    route:
    - destination:
        host: minio.minio-operator.svc.cluster.local
        port:
          number: 80
  - match:
    - port: 3810
    route:
    - destination:
        host: ml-pipeline-ui.kubeflow.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /airflow/
    - uri:
        prefix: /airflow
    route:
      - destination:
          host: airflow-webserver.airflow.svc.cluster.local
          port:
            number: 8080
  - match:
    - uri:
        prefix: /catalogue/keycloak/
    - uri:
        prefix: /catalogue/keycloak
    rewrite:
      uri: /keycloak/
    route:
    - destination:
        host: nginx.catalogue.svc.cluster.local
        port:
          number: 8000
  - match:
    - port: 9000
      uri:
        prefix: /admin
    rewrite:
      uri: /
    route:
    - destination:
        host: minio.catalogue.svc.cluster.local
        port:
          number: 9001
  - match:  # NOTE (1)
    - uri:
        prefix: /dspn-webeditor/
    - uri:
        prefix: /dspn-webeditor
    #rewrite:
    #  uri: /
    route:
    - destination:
        host: dspn-webeditor.default.svc.cluster.local
        port:
          number: 3000
  - match:
    - port: 9000
    route:
    - destination:
        host: minio.catalogue.svc.cluster.local
        port:
          number: 9000
  - match:
    - uri:
        prefix: /fkNyAxuFOr3taStQb9tUFmFKd4HepRok/
    - uri:
        prefix: /fkNyAxuFOr3taStQb9tUFmFKd4HepRok
    route:
    - destination:
        host: nginx.catalogue.svc.cluster.local
        port:
          number: 8000

  - match:
    - uri:
        prefix: /catalogue/
    - uri:
        prefix: /catalogue
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx.catalogue.svc.cluster.local
        port:
          number: 8000
  # - match:
  #   - uri:
  #       prefix: /css/
  #   - uri:
  #       prefix: /js/
  #   - uri:
  #       prefix: /css
  #   - uri:
  #       prefix: /fonts/
  #   - uri:
  #       prefix: /fonts
  #   - uri:
  #       prefix: /js
  #   route:
  #   - destination:
  #       host: nginx.catalogue.svc.cluster.local
  #       port:
  #         number: 8000

# NOTE
# 1. URL rewriting. We use overlapping prefixes to make sure `/x`, `/x/`
# and `/x/p` get rewritten to `/`, `/` and `/p` respectively. Istio will
# moan about it, e.g.
#
#   Warning: virtualService rule #3 match #0 of prefix /argocd/ is not used
#           (duplicate/overlapping match in rule #1 of prefix /argocd on #3)
#
# But if you take out either URI prefix match, things will break---e.g.
# try navigating to the Argo CD UI.
# See:
# - https://github.com/istio/istio/issues/8076
#
# 2. Keycloak base path. Keycloak is configured with an HTTP rel path of
# `/keycloak`, which makes every URL in the UI is relative to `/keycloak`.
# So we don't need a rewrite rule in this case.
#
