deployment/mesh-infra/istio/routing/tcp.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "tcp-virtual-service"
spec:
  gateways:
  - "teadal-gateway"
  hosts:
  - "*"
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgres.default.svc.cluster.local
        port:
          number: 5432
  - match:
    - port: 9000
    route:
    - destination:
        host: minio.catalogue.svc.cluster.local
        port:
          number: 9000
  - match:
    - port: 8000
    route:
    - destination:
        host: nginx.catalogue.svc.cluster.local
        port:
          number: 8000
  - match:
    - port: 3000
    route:
    - destination:
        host: dspn-webeditor.svc.cluster.local
        port: 
          number: 3000
  # - match: 
  #   - port: 8000
  #   route:
  #   - destination:
  #       host: advocate.trust-plane.svc.cluster.local
  #       port:
  #         number: 8000
